--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div class="tuşlar">
        <button class="eksi">-</button>
         <button class="artı">+</button>
+        <button class="carpi">x2</button>
     </div>
     <script src="script.js"></script>
 </body>
